# MPI_test

./: CMakeLists.txt
src/: 2D_vector.cpp  add_vector.cpp  main.cpp  test.cpp
